--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                         <p>
                                         </p>
                                         <ul class="resume-list">
-                                            <li>Wrote back-end systems for metaverse games using NestJS, ensuring scalability and performance.</li>
+                                            <li>Wrote back-end systems for metaverse games, ensuring scalability and performance.</li>
                                             <li>Developed and deployed ERC1155, ERC721, and ERC20 smart contracts for in-game assets, including staking,
                                                 purchasing, and selling mechanisms.</li>
                                             <li>Created custom smart contracts to enable advanced game functionalities.</li>
